--- a/scoots/tours.html
+++ b/scoots/tours.html
@@ -39,79 +39,78 @@
     </nav>
     <main>
         <h2>Tours</h2>
-        <div class="content-box-1">
-            <!--<img src="images/weatherbanner.jpeg" alt="Banner Summary">-->
-            <picture>
-                <source media="(max-width: 500px)" srcset="images/sodasprings-banner.jpg">
-                <source media="(max-width: 900px)" srcset="images/sodasprings-banner.jpg">
-                <img src="/lesson11/images/sodasprings-banner.jpg" alt="Banner Summary">
-            </picture>
-            <section class="box-summary">
-                <h3>Weather Summary</h3>
-                <p>Currently: <span id="current"></span></p>
-                <p>Temperature: <span id="temp"></span>°F</p>
-                <p>Wind Chill: <span id="windchill"></span>°F</p>
-                <p>Humidity: <span id="humidity"></span>%</p>
-                <p>Wind Speed: <span id="windspeed"></span> mph</p>
-            </section>
-        </div>
-        <div class="content-box-2">
-            <h3>5 Day Forecast</h3>
-            <div class="forecast">
-                <div class="content">
-                    <div id="days"></div>
-                    <img id="imgs" src="#" alt="#">
-                    <div id="temps"></div>
-                </div>
-                <div class="content">
-                    <div id="days"></div>
-                    <img id="imgs" src="#" alt="#">
-                    <div id="temps"></div>
-                </div>
-                <div class="content">
-                    <div id="days"></div>
-                    <img id="imgs" src="#" alt="#">
-                    <div id="temps"></div>
-                </div>
-                <div class="content">
-                    <div id="days"></div>
-                    <img id="imgs" src="#" alt="#">
-                    <div id="temps"></div>
-                </div>
-                <div class="content">
-                    <div id="days"></div>
-                    <img id="imgs" src="#" alt="#">
-                    <div id="temps"></div>
-                </div>
-            </div>
-        </div>
-        <section class="events">
-            <h3>Upcoming Events:</h3>
-            <hr>
-            <p></p>
-        </section>
+
         <div class="content-box-3">
-            <img src="images/river-article.jpg" alt="Fall">
-            <h3>Article</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda deleniti praesentium voluptatem
-                repellendus
-                quibusdam doloremque. Illum porro provident asperiores maxime aut dolor modi dolorum ab ipsum! Impedit
-                expedita
-                dolores laudantium.</p>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus alias fuga aut facilis rem at
-                similique
-                cupiditate ad nam? Ea consectetur vel porro deleniti fugiat voluptate voluptas suscipit sit vitae!</p>
+            <img src="images/coast.jpg" alt="coast">
+
+            <h3>Coast Tour</h3>
+            <p>
+                Mexico’s largest inhabited island, Cozumel boasts pristine Caribbean beaches and spectacular coral life.
+                On this exclusive jungle and snorkeling tour, you’ll get a taste of the island’s ancient culture and
+                natural beauty behind the wheel of your own private jeep—with time to savor local delicacies. Maximize
+                your visit by covering all the island's must-see sites in one visit.
+                Meet your guide in your hotel lobby and, at the wheel of your own jeep, follow your guide to ancient
+                Mayan settlements and a coral-filled underwater park. Your guide will fill you in on the powerful
+                civilization that once ruled over the area before you hit the beach.
+
+                Cozumel’s colorful corals are part of the world’s second largest barrier reef. Strap on a snorkeling
+                mask for a first-hand look at the island’s stunning marine scenery. You’ll have time to lounge on
+                Cozumel’s eastern sand beaches, famous for their warm turquoise waters, and enjoy an authentic lunch
+                before returning to your hotel.
+
+                You can also customize your itinerary to include optional upgrades like visits to San Gervasio
+                archaeological site and Punta Sur National Park, or activities like scuba diving, horseback riding,
+                parasailing, or swimming with dolphins. <a style="color: #823038;"
+                    href="https://www.tripadvisor.com/AttractionProductReview-g150809-d11456968-Private_Jeep_Excursion_in_Cozumel_with_Lunch_and_Snorkeling-Cozumel_Yucatan_Penins.html">Read
+                    More</a>
+            </p>
         </div>
-        <div class="content-box-4">
-            <section id="contact">
-                <h3>Contact Information</h3>
-                <p>1234 Soda Street</p>
-                <p>Soda Springs, Idaho</p>
-                <p>83456</p>
-                <p>208-321-7654</p>
-                <p>contact@weatherday.com</p>
-            </section>
-            <img src="images/sodasprings-map.PNG" alt="Preston Map">
+        <div class="content-box-3">
+            <img src="images/mayan.jpg" alt="coast">
+
+            <h3>Ruins Tour</h3>
+            <p>
+                Discover the ancient history of Mexico on a day trip from Cozumel to the archaeological site of Tulum.
+                On a ferry to the mainland, take in views of the coastline that most visitors never get to experience.
+                Once at Tulum, your guide gives context to unmarked points of interest that are easy to miss if visiting
+                on your own. Lunch, transportation, and admission tickets are included.Meet your tour operator at a pier
+                in downtown Cozumel, where you board a ferry bound for mainland Mexico. After a pleasant ride with
+                coastal views rarely seen by visitors, arrive in Playa del Carmen. An air-conditioned minivan brings you
+                directly to the gates of Tulum.
+
+                Follow your guide on a walking tour of the ancient city perched on an oceanside cliff. Going with a
+                guide ensures you understand the layout of the archaeological site and don’t miss any unmarked points of
+                interest. Pause for photos of the temples and castles with a backdrop of the Caribbean Sea.
+
+                After your tour, enjoy lunch with the group and then head back to Playa del Carmen to catch the ferry.
+                Finish the day with a relaxing ride back to Cozumel. <a style="color: #823038;"
+                    href="https://www.tripadvisor.com/AttractionProductReview-g150809-d11988220-Tulum_Mayan_Ruins_Express_from_Cozumel-Cozumel_Yucatan_Peninsula.html">Read
+                    More</a>
+            </p>
+        </div>
+        <div class="content-box-3">
+            <img src="images/tour.jpg" alt="coast">
+
+            <h3>Private Tour</h3>
+            <p>
+                Plan your own sightseeing itinerary while on vacation on beautiful Cozumel. Travel in the comfort of a
+                private vehicle with your own personal guide. This private customizable tour is designed for 4 hours of
+                sightseeing at island attractions such as the Municipal Market, San Gervasio archaeological ruins and
+                Chankanaab Beach Adventure Park. Pricing is based on four passengers per vehicle, including round-trip
+                transport.
+                Your experienced guide will get to know you and make suggestions to
+                build your perfect tour. All our vehicles are equipped with A/C for your comfort. Places you may visit:
+                -City tour of Historical Monuments. -Shopping time in town. -Beach time in one of our private beach
+                clubs -Go to Snorkeling to Sky Reef or Tortugas Snorkel Center -Tour the east coast of the island with
+                stops at different beautiful spots for marvelous photo opportunities and/or lunch as; -Sr Iguanas
+                -Mezcalitos -Punta Morena -Chen Rio -Coconuts -Playa San Martin -El Mirador -Mojito Bar -Rastas Reggae
+                Bar. Additional destinations you can visit for a nominal entrance fee: -The Chocolate Factory -Sabores
+                De Cozumel park -Mayan Village theme park -The Mayan Kao Kao Factory -Discovery Mexico park -Chankanaab
+                -San Gervasio Ruins -Punta Sur Park -El Cedral Town This is your opportunity to design a tour to do what
+                you want, when you want and stay as long as you want! <a style="color: #823038;"
+                    href="https://www.tripadvisor.com/AttractionProductReview-g150809-d11471392-Private_Island_Tour_in_Cozumel_at_Your_Leisure-Cozumel_Yucatan_Peninsula.html">Read
+                    More</a>
+            </p>
         </div>
     </main>
     <footer>
@@ -123,8 +122,6 @@
         <span id="lastUpdate"></span>
     </footer>
     <script src="js/toggle.js"></script>
-    <script src="js/windchill.js"></script>
-    <script src="js/sodaspringsapi.js"></script>
 </body>
 
 </html>
