--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -46,14 +46,14 @@
       <p>
         <dl>
           <li>Honda Motor Scooters</li>
-          <dd>Honda Metropolitan (49cc) - 1 person</dd>
-          <dd>Honda Dio (110cc) - 2 person</dd>
-          <dd>Honda PCX150 (149cc) - 2 person</dd>
+          <dd>- Honda Metropolitan (49cc) - 1 person</dd>
+          <dd>- Honda Dio (110cc) - 2 person</dd>
+          <dd>- Honda PCX150 (149cc) - 2 person</dd>
           <li>ATV Side-by-Side</li>
-          <dd>Honda Pioneer 1000</dd>
+          <dd>- Honda Pioneer 1000</dd>
           <li>Jeep Rentals</li>
-          <dd>4-door Jeep Wrangler - manual with A/C - 5 people max</dd>
-          <dd>2-door Jeep Wrangler - open air - manual - 4 people max</dd>
+          <dd>- 4-door Jeep Wrangler - manual with A/C - 5 people max</dd>
+          <dd>- 2-door Jeep Wrangler - open air - manual - 4 people max</dd>
         </dl>
       </p>
     </div>
