--- a/scoots/index.html
+++ b/scoots/index.html
@@ -44,7 +44,7 @@
             all of the little details that you wounldn't know otherwise. Please make us one of your stops on your visit
             here and we can tale you the rest of the way!</p>
             <div id="wireframe">Please make a reservation 
-                <a href="https://bjneib.github.io/lesson11/stormcenter.html">here.</a>
+                <a href="https://bjneib.github.io/scoots/reservation.html">here.</a>
             </div>
         <div class="cards"></div>
         <h3>Cozumel Forecast</h3>
