--- a/scoots/send.html
+++ b/scoots/send.html
@@ -31,9 +31,9 @@
             <li><a href="#" onclick="toggle()">&#9776; Menu</a></li>
             <li><a href="https://bjneib.github.io/scoots/index.html">Home</a></li>
             <li><a href="https://bjneib.github.io/scoots/rentals.html">Rentals</a></li>
-            <li><a class="active" href="https://bjneib.github.io/scoots/reservation.html">Reservations</a></li>
+            <li><a href="https://bjneib.github.io/scoots/reservation.html">Reservations</a></li>
             <li><a href="https://bjneib.github.io/scoots/tours.html">Tours</a></li>
-            <li><a href="https://bjneib.github.io/scoots/contact.html">Contact</a></li>
+            <li><a class="active" href="https://bjneib.github.io/scoots/contact.html">Contact</a></li>
             <!--<li><a href="https://bjneib.github.io/lesson11/gallery.html">Gallery</a></li>-->
         </ul>
     </nav>
