--- a/scoots/reservation.html
+++ b/scoots/reservation.html
@@ -41,10 +41,26 @@
         <h2>Reservations</h2>
         <form method="get" action="thanks.html">
             <fieldset>
+                <legend>Rental Agreement Information</legend>
+                <ul>
+                    <li>A $50 security deposit is required to confirm reservations.</li>
+                    <li>A valid drivers license is required in hand at time of rental.</li>
+                    <li>No one under 12 years of age are allowed to ride on the scooters.</li>
+                    <li>Fuel charge not included.</li>
+                    <li>Unlimited mileage.</li>
+                    <li>Liability insurance is free of charge.</li>
+                    <li>Reservations rate requires 24 hour prior notification.</li>
+                    <li>Free delivery to Cozumel hotel, Airbnb, or private residence for 2+ day rentals.</li>
+                    <li>Payment via Google Pay, cash, credit card, debit card, or PayPal.</li>
+                    <li>Rentals may be returned to either location.</li>
+                </ul>
+            </fieldset>
+            <fieldset>
                 <legend>Personal Information</legend>
                 <label class="top">*Full Name: <input type="text" name="fname" pattern="^[a-zA-Z\s\-\.]{5,}$"
                         required></label>
-                <label class="top">*Email: <input type="email" name="email" placeholder="someone@gmail.com" required></label>
+                <label class="top">*Email: <input type="email" name="email" placeholder="someone@gmail.com"
+                        required></label>
                 <label class="top">*Phone: <input type="tel" name="phone" placeholder="123-456-7890" required></label>
                 <label class="top">Cruise Line (If Applicable): <input type="text" name="cruise"></label>
             </fieldset>
