--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -49,7 +49,7 @@
         cupiditate ad nam? Ea consectetur vel porro deleniti fugiat voluptate voluptas suscipit sit vitae!</p>
     </div>
     <div class="content-box-3">
-      <table id="Info">
+      <table class="table">
         <caption>Max Persons and Price Chart (includes Tax)</caption>
         <thead>
           <tr>
@@ -70,50 +70,50 @@
           <tr>
             <td>~Honda Metro Scooter</td>
             <td>1</td>
-            <td id="rhd1"></td>
-            <td id="rfd1"></td>
-            <td id="whd1"></td>
-            <td id="wfd1"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
           <tr>
             <td>~Honda Dio Scooter</td>
             <td>2</td>
-            <td id="rhd2"></td>
-            <td id="rfd2"></td>
-            <td id="whd2"></td>
-            <td id="wfd2"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
           <tr>
             <td>~Honda PCX150 Scooter</td>
             <td>2</td>
-            <td id="rhd3"></td>
-            <td id="rfd3"></td>
-            <td id="whd3"></td>
-            <td id="wfd3"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
           <tr>
             <td>Honda Pioneer ATV</td>
             <td>4</td>
-            <td id="rhd4"></td>
-            <td id="rfd4"></td>
-            <td id="whd4"></td>
-            <td id="wfd4"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
           <tr>
             <td>Jeep Wrangler - 4 door with a/c</td>
             <td>5</td>
-            <td id="rhd5"></td>
-            <td id="rfd5"></td>
-            <td id="whd5"></td>
-            <td id="wfd5"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
           <tr>
             <td>Jeep Wrangler - 2 door</td>
             <td>4</td>
-            <td id="rhd6"></td>
-            <td id="rfd6"></td>
-            <td id="whd6"></td>
-            <td id="wfd6"></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
           </tr>
         </tbody>
       </table>
