--- a/scoots/reservation.html
+++ b/scoots/reservation.html
@@ -8,7 +8,7 @@
         content="Come and explore the wonderful island of Cozumel! We will supply you with rentals and tours!">
     <link href="https://fonts.googleapis.com/css2?family=Catamaran&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/stormcenter.css">
+    <link rel="stylesheet" href="css/reservation.css">
     <link rel="stylesheet" href="/lesson8/css/medium.css">
     <link rel="stylesheet" href="/lesson8/css/large.css">
     <title>Scoots - Rentals and Tours</title>
@@ -372,7 +372,7 @@
         <span id="lastUpdate"></span>
     </footer>
     <script src="js/toggle.js"></script>
-    <script src="js/severity.js"></script>
+    <script src="js/persons.js"></script>
 </body>
 
 </html>
