--- a/scoots/tours.html
+++ b/scoots/tours.html
@@ -8,7 +8,7 @@
         content="Come and explore the wonderful island of Cozumel! We will supply you with rentals and tours!">
     <link href="https://fonts.googleapis.com/css2?family=Catamaran&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/preston.css">
+    <link rel="stylesheet" href="css/small.css">
     <link rel="stylesheet" href="css/medium.css">
     <link rel="stylesheet" href="css/large.css">
     <title>Scoots - Rentals and Tours</title>
