--- a/scoots/confirmation.html
+++ b/scoots/confirmation.html
@@ -8,7 +8,7 @@
         content="Come and explore the wonderful island of Cozumel! We will supply you with rentals and tours!">
     <link href="https://fonts.googleapis.com/css2?family=Catamaran&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/stormcenter.css">
+    <link rel="stylesheet" href="css/reservation.css">
     <link rel="stylesheet" href="/lesson8/css/medium.css">
     <link rel="stylesheet" href="/lesson8/css/large.css">
     <title>Scoots - Rentals and Tours</title>
@@ -34,7 +34,6 @@
             <li><a class="active" href="https://bjneib.github.io/scoots/reservation.html">Reservations</a></li>
             <li><a href="https://bjneib.github.io/scoots/tours.html">Tours</a></li>
             <li><a href="https://bjneib.github.io/scoots/contact.html">Contact</a></li>
-            <!--<li><a href="https://bjneib.github.io/lesson11/gallery.html">Gallery</a></li>-->
         </ul>
     </nav>
     <main>
@@ -50,7 +49,6 @@
         <span id="lastUpdate"></span>
     </footer>
     <script src="js/toggle.js"></script>
-    <script src="js/severity.js"></script>
 </body>
 
 </html>
