--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -9,8 +9,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Catamaran&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/preston.css">
-  <link rel="stylesheet" href="css/stormcenter.css">
+  <link rel="stylesheet" href="css/small.css">
+  <link rel="stylesheet" href="css/reservation.css">
   <link rel="stylesheet" href="css/medium.css">
   <link rel="stylesheet" href="css/large.css">
   <title>Scoots - Rentals and Tours</title>
@@ -36,7 +36,6 @@
       <li><a href="https://bjneib.github.io/scoots/reservation.html">Reservations</a></li>
       <li><a href="https://bjneib.github.io/scoots/tours.html">Tours</a></li>
       <li><a class="active" href="https://bjnieb.github.io/scoots/contact.html">Contact</a></li>
-      <!--<li><a href="https://bjneib.github.io/lesson11/gallery.html">Gallery</a></li>-->
     </ul>
   </nav>
   <main>
