--- a/scoots/index.html
+++ b/scoots/index.html
@@ -34,7 +34,6 @@
             <li><a href="https://bjneib.github.io/scoots/reservation.html">Reservations</a></li>
             <li><a href="https://bjneib.github.io/scoots/tours.html">Tours</a></li>
             <li><a href="https://bjneib.github.io/scoots/contact.html">Contact</a></li>
-            <!--<li><a href="https://bjneib.github.io/lesson11/gallery.html">Gallery</a></li>-->
         </ul>
     </nav>
     <main>
@@ -96,7 +95,7 @@
         <span id="lastUpdate"></span>
     </footer>
     <script src="js/toggle.js"></script>
-    <script src="js/towndata.js"></script>
+    <script src="js/rentaldata.js"></script>
     <script src="js/windchill.js"></script>
     <script src="js/cozumelapi.js"></script>
 </body>
