--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -8,7 +8,7 @@
     content="Come and explore the wonderful island of Cozumel! We will supply you with rentals and tours!">
   <link href="https://fonts.googleapis.com/css2?family=Catamaran&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/preston.css">
+  <link rel="stylesheet" href="css/small.css">
   <link rel="stylesheet" href="css/medium.css">
   <link rel="stylesheet" href="css/large.css">
   <link rel="stylesheet" href="css/tablebuild.css">
@@ -35,7 +35,6 @@
       <li><a href="https://bjneib.github.io/scoots/reservation.html">Reservations</a></li>
       <li><a href="https://bjneib.github.io/scoots/tours.html">Tours</a></li>
       <li><a href="https://bjneib.github.io/scoots/contact.html">Contact</a></li>
-      <!--<li><a href="https://bjneib.github.io/lesson11/gallery.html">Gallery</a></li>-->
     </ul>
   </nav>
   <main>
