--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -41,11 +41,9 @@
     <h2>Rentals</h2>
     <div class="content-box-3">
       <h3>Information</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda deleniti praesentium voluptatem repellendus
-        quibusdam doloremque. Illum porro provident asperiores maxime aut dolor modi dolorum ab ipsum! Impedit expedita
-        dolores laudantium.</p>
-      <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Temporibus alias fuga aut facilis rem at similique
-        cupiditate ad nam? Ea consectetur vel porro deleniti fugiat voluptate voluptas suscipit sit vitae!</p>
+      <p>Our rental vehicles are constantly being checked and serviced to ensure the safety and well being of our
+        customers. We want to make sure that your trip here in Cozumel is a fantastic one.</p>
+      <p>We know that a huge part your trip will consist of a good tour guide. Be sure to ask us about our tours!</p>
     </div>
     <div class="content-box-3">
       <table class="table">
