--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -65,52 +65,52 @@
         </thead>
         <tbody>
           <tr>
-            <td>~Honda Metro Scooter</td>
-            <td>1</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td class="type">~Honda Metro Scooter</td>
+            <td class="persons">1</td>
+            <td class="halfRes"></td>
+            <td class="fullRes"></td>
+            <td class="halfWalk"></td>
+            <td class="fullWalk"></td>
           </tr>
           <tr>
-            <td>~Honda Dio Scooter</td>
-            <td>2</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td class="type">~Honda Dio Scooter</td>
+            <td class="persons">2</td>
+            <td class="halfRes"></td>
+            <td class="fullRes"></td>
+            <td class="halfWalk"></td>
+            <td class="fullWalk"></td>
           </tr>
           <tr>
-            <td>~Honda PCX150 Scooter</td>
-            <td>2</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td class="type">~Honda PCX150 Scooter</td>
+            <td class="persons">2</td>
+            <td class="halfRes"></td>
+            <td class="fullRes"></td>
+            <td class="halfWalk"></td>
+            <td class="fullWalk"></td>
           </tr>
           <tr>
-            <td>Honda Pioneer ATV</td>
-            <td>4</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td class="type">Honda Pioneer ATV</td>
+            <td class="persons">4</td>
+            <td class="halfRes"></td>
+            <td class="fullRes"></td>
+            <td class="halfWalk"></td>
+            <td class="fullWalk"></td>
           </tr>
           <tr>
-            <td>Jeep Wrangler - 4 door with a/c</td>
-            <td>5</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td class="type">Jeep Wrangler - 4 door with a/c</td>
+            <td class="persons">5</td>
+            <td class="halfRes"></td>
+            <td class="fullRes"></td>
+            <td class="halfWalk"></td>
+            <td class="fullWalk"></td>
           </tr>
           <tr>
-            <td>Jeep Wrangler - 2 door</td>
-            <td>4</td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+            <td class="type">Jeep Wrangler - 2 door</td>
+            <td class="persons">4</td>
+            <td class="halfRes"></td>
+            <td class="fullRes"></td>
+            <td class="halfWalk"></td>
+            <td class="fullWalk"></td>
           </tr>
         </tbody>
       </table>
